fix: wcag minimum contrast

--- a/Frontend/src/styles/globals.scss
+++ b/Frontend/src/styles/globals.scss
@@ -182,6 +182,11 @@ a{
 mat-label .required-marker {
     color: darken($colorStatusNegative, 20%);
 }
+::placeholder {
+  color: $placeholderColor;
+  // By default, Firefox reduces opacity of placeholders.
+  opacity: 1;
+}
 @media screen and (max-width: $mobileWidth) {
   .hidemobile {
     display: none;
